# forlorn-extremity

./: CMakeLists.txt  Makefile  README  channel.h  inflight.cxx  minInstance.c  minInstance.h  sterile_flux.cxx
data/bounds/: PS191_UM4_EE_KAON.csv  PS191_UM4_EE_PION.csv  b1_babar.csv  b1_babar2014.csv  b1_ewp.csv  b1_mg2.csv  nutev_muon.csv
inc/: appellced.h  bounds.h  channel.h  complex_functions.h  decayrates.h  hyp_2F1.h  minInstance.h  zprimecrosssection.h
notes/: Makefile  Zprime.tex  decays.tex
plots/: plots.ipynb
src/: CMakeLists.txt  CMakeLists.txt~  appellced.cxx  bounds.cxx  channel.cxx  complex_functions.cxx  decayrates.cxx  fourmomentum.cxx  hyp_2F1.cxx  inflight.cxx  minInstance.cxx  minInstance.cxx~  sterile_flux.cxx
